[package]
name = "esp8266-flash"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
description = "A driver for the esp8266 onboard flash"

[dependencies]
xtensa-lx106-rt = "0.0.1"
spi-memory = "0.2.0"
embedded-hal = "0.2.4"
esp8266 = "0.0.6"
void = { version = "1.0.2", default-features = false }